change FY1 to DZFY

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="upgrade">升级</string>
     <string name="about_p1">飞影为您提供高清、流畅的视频服务。您可包月看视频，免流量费，不占用原有套餐流量，随时随地欣赏丰富多彩的视频节目。</string>
     <string name="about_p2">飞影For Android Phone客户端是为Android手机用户精心打造的网络视频软件，通过细致贴心的界面设计、丰富多彩的视频节目、高清流畅的播放服务，为您带来不一样的在线视频观看体验！</string>
-    <string name="about_p3">安徽联通用户请发送FY1(5元/月)到1065583398订购飞影业务;退订飞影业务发送TDFY到1065583398。</string>
+    <string name="about_p3">安徽联通用户请发送DZFY(5元/月)到1065583398订购飞影业务;退订飞影业务发送TDFY到1065583398。</string>
     <string name="copy_right">安徽联通  版权所有</string>
     <string name="hot_keywords">热门搜索</string>
     <string name="feedback_info">感谢您使用飞影Android应用，如果您在使用过程中遇到任何不便或有意见与建议，都欢迎您反馈给我们。</string>
